k8s/traefik-dashboard-basic-auth.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: admin-basic-auth
spec:
  basicAuth:
    secret: admin-basic-auth
